# chitralok

./: .gitignore  CMakeLists.txt  Readme.md  cons.sh  jfif.c  jfif.h  logging.h  main.c  nirman.sh  utils.h
src/: jfif.c  jfif.h  logging.h  main.c
